--- a/pages/1788.html
+++ b/pages/1788.html
@@ -305,103 +305,46 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='test_centering_a__of_2_images'>test centering a <code>&lt;p&gt;</code> of 2 images</h1>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_408a4c62e39a9ff789b5e475e64aecc1a1c8f346_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd><msup><mi>Ω</mi> <mo>•</mo></msup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo stretchy='false'>|</mo><mi>q</mi></mrow></msup><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo></mtd> <mtd><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo stretchy='false'>|</mo><mi>q</mi></mrow></msup><mo stretchy='false'>)</mo></mtd> <mtd><msub><mo>⊗</mo> <mi>ℝ</mi></msub></mtd> <mtd><msup><mo>∧</mo> <mo>•</mo></msup><mo stretchy='false'>⟨</mo></mtd> <mtd><mstyle mathvariant='bold'><mi>d</mi></mstyle><msup><mi>x</mi> <mn>1</mn></msup><mo>,</mo><mi>⋯</mi><mo>,</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><msup><mi>x</mi> <mi>p</mi></msup><mo>,</mo></mtd> <mtd><mstyle mathvariant='bold'><mi>d</mi></mstyle><msup><mi>θ</mi> <mn>1</mn></msup><mo>,</mo><mi>⋯</mi><mo>,</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><msup><mi>θ</mi> <mi>q</mi></msup></mtd> <mtd><mo stretchy='false'>⟩</mo></mtd></mtr> <mtr><mtd><mtext>bidegree</mtext></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mi>even</mi><mo stretchy='false'>)</mo></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo stretchy='false'>(</mo><mn>1</mn><mo>,</mo><mi>even</mi><mo stretchy='false'>)</mo></mtd> <mtd><mo stretchy='false'>(</mo><mn>1</mn><mo>,</mo><mi>odd</mi><mo stretchy='false'>)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \array{
+    &amp;
+    \Omega^\bullet(\mathbb{R}^{p|q})
+     &amp;=&amp;
+     C^\infty(\mathbb{R}^{p|q})
+      &amp;
+       \otimes_{\mathbb{R}}
+      &amp;
+      \wedge^\bullet \langle
+      &amp;
+       \mathbf{d}x^1, \cdots, \mathbf{d}x^p,
+      &amp;
+        \mathbf{d}\theta^1, \cdots, \mathbf{d}\theta^q
+      &amp;
+     \rangle
+     \\
+     \text{bidegree}
+     &amp;
+     &amp;&amp;
+     (0,even)
+     &amp;&amp;&amp;
+     (1,even)
+     &amp;
+     (1,odd)
+  }
 
-<h2 id='spacing_via_css'>Spacing via CSS</h2>
-
-<div style='text-align: center;'>
-<p><span style='margin-right: 50px;'><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/></span> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-</div>
-
-<h2 id='2_images_in_a_row'>2 images in a row</h2>
-
-<p><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-
-<h2 id='with__spacing_between_them'>with <code> $\phantom{AAAAAA}$</code> spacing between them</h2>
-
-<p><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAAAA}</annotation></semantics></math> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-
-<h2 id='with__spacing'>with <code>$\quad\quad\quad \quad$</code> spacing</h2>
-
-<p><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace></mrow><annotation encoding='application/x-tex'>\quad\quad\quad \quad</annotation></semantics></math> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-
-<h2 id='quad_spaced_with__on_following_line'>quad spaced with <code>  {: style=&#39;margin:auto}</code> on following line</h2>
-
-<p style='margin: auto;'><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace></mrow><annotation encoding='application/x-tex'>\quad\quad\quad \quad</annotation></semantics></math> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-
-<h2 id='above_wrapped_in_a__created_with_'>above wrapped in a <code>&lt;div&gt;</code> created with <code>+-- {: .standout}</code></h2>
-
-<div class='standout'>
-<p style='margin: auto;'><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace></mrow><annotation encoding='application/x-tex'>\quad\quad\quad \quad</annotation></semantics></math> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-</div>
-
-<h2 id='above_followed_by_'>above followed by <code> {: style=&#39;width:100%&#39;}</code></h2>
-
-<div style='width: 100%;'>
-<p style='margin: auto;'><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace></mrow><annotation encoding='application/x-tex'>\quad\quad\quad \quad</annotation></semantics></math> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-</div>
-
-<h2 id='above_wrapped_in_a_plain_created_with_'>above wrapped in a plain<code>&lt;div&gt;</code> created with <code>+-- {: style=&#39;width:100%&#39;}</code></h2>
-
-<p>`</p>
-
-<div style='width: 100%;'>
-<p style='margin: auto;'><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace></mrow><annotation encoding='application/x-tex'>\quad\quad\quad \quad</annotation></semantics></math> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-</div>
-
-<h2 id='above_with__on_both_inner_and_outer'>above with <code>text-align:center</code> on both inner and outer</h2>
-
-<p>`</p>
-
-<div style='width: 100%; text-align: center;'>
-<p style='margin: auto; text-align: center;'><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace></mrow><annotation encoding='application/x-tex'>\quad\quad\quad \quad</annotation></semantics></math> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-</div>
-
-<h2 id='above_with__on_inner'>above with <code>text-align:center</code> on inner</h2>
-
-<p>`</p>
-
-<div style='width: 100%;'>
-<p style='margin: auto; text-align: center;'><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace></mrow><annotation encoding='application/x-tex'>\quad\quad\quad \quad</annotation></semantics></math> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-</div>
-
-<h2 id='above_with__on_outer'>above with <code>text-align:center</code> on outer</h2>
-
-<p>`</p>
-
-<div style='width: 100%; text-align: center;'>
-<p style='margin: auto; text-align: center;'><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace></mrow><annotation encoding='application/x-tex'>\quad\quad\quad \quad</annotation></semantics></math> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-</div>
-
-<h2 id='no_div_wrapping_just__following_the_list'>no div wrapping, just <code>{: style=&#39;text-align:center&#39;}</code> following the list</h2>
-
-<p>`</p>
-
-<p style='text-align: center;'><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace></mrow><annotation encoding='application/x-tex'>\quad\quad\quad \quad</annotation></semantics></math> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-
-<h2 id='above_with_an_extra_span_element_at_end_of_list'>above with an extra span? element at end of list</h2>
-
-<p>`</p>
-
-<p style='text-align: center;'><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace><mspace width='1em'></mspace></mrow><annotation encoding='application/x-tex'>\quad\quad\quad \quad</annotation></semantics></math> <img alt='' src='/nlab/files/adjunction-down-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>foo</mi></mrow><annotation encoding='application/x-tex'>foo</annotation></semantics></math></p>
-
-<h2 id='does__spacing_not_work'>does <code> $\phantom{AAAAAA}$</code> spacing not work?</h2>
-
-<p style='text-align: center;'><img alt='String diagram of first zigzag identity (for &#39;Adjunction&#39;)' src='/nlab/files/adjunction-up-string.png'/> <math class='maruku-mathml' display='inline' id='mathml_dc65a5120b7f3cb578f5332610a796707656d4e4_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAAAA}</annotation></semantics></math> <img alt='' src='/nlab/files/adjunction-down-string.png'/></p>
-
-<h2 id='end'>end</h2>
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on June 25, 2018 at 17:15:06.
+  Last revised on June 26, 2018 at 02:54:48.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1537" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1537 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1538" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1538 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
