--- a/pages/3535.html
+++ b/pages/3535.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -314,7 +313,7 @@ margin-left: 0em;
 <li>P. J. Higgins, <em>Categories and groupoids</em>, <a href='http://www.emis.de/journals/TAC/reprints/articles/7/tr7abs.html'>Repr. Theory Appl. Categ., 1 – 178</a> (electronic), ISSN 1201-561X, reprint of the 1971 original <em>Notes on categories and groupoids</em>, (Van Nostrand Reinhold, London; MR0327946) with a new preface by the author.</li>
 </ul>
 
-<p>and for his long standing collaboration with <a class='existingWikiWord' href='/nlab/show/Ronnie+Brown'>Ronnie Brown</a> on <a class='existingWikiWord' href='/nlab/show/Nonabelian+Algebraic+Topology'>nonabelian algebraic topology</a>, see <a href='http://www.bangor.ac.uk/~mas010/nonab-a-t.html'>here</a>.</p>
+<p>and for his long standing collaboration with <a class='existingWikiWord' href='/nlab/show/Ronnie+Brown'>Ronnie Brown</a> on <a class='existingWikiWord' href='/nlab/show/Nonabelian+Algebraic+Topology'>nonabelian algebraic topology</a>, see <a href='http://groupoids.org.uk/nonab-a-t.html'>here</a>.</p>
 
 <p>His earlier paper</p>
 
@@ -347,19 +346,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 22, 2015 10:50:08 
-  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (2.27.154.95)
+  <p>
+  Last revised on June 26, 2018 at 07:26:39.
+  See the <a href="https://ncatlab.org/nlab/history/Philip Higgins" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Philip+Higgins" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Philip+Higgins/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Philip+Higgins" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Philip+Higgins" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Philip+Higgins" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Philip+Higgins/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Philip+Higgins" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Philip+Higgins" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Philip Higgins/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Philip+Higgins" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Philip+Higgins" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Philip+Higgins" id="view_source" rel="nofollow">Source</a>
