--- a/pages/4416.html
+++ b/pages/4416.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +307,15 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><em>Francis Borceux</em> is a category theorist at Louvain (Belgium). He wrote a 3-volume</p>
+    <p><em>Francis Borceux</em> is a <a class='existingWikiWord' href='/nlab/show/category+theory'>category theorist</a> at Louvain (Belgium).</p>
+
+<ul>
+<li><a href='https://www.genealogy.math.ndsu.nodak.edu/id.php?id=111971'>Mathematics Genealogy page</a></li>
+</ul>
+
+<h2 id='writings'>Writings</h2>
+
+<p>Borceux wrote a 3-volume</p>
 
 <ul>
 <li><strong><a class='existingWikiWord' href='/nlab/show/Handbook+of+Categorical+Algebra'>Handbook of Categorical Algebra</a></strong></li>
@@ -328,6 +335,12 @@ margin-left: 0em;
 <li>
 <p>Francis Borceux, Gilberte Van den Bossche, <em>Algebra in a localic topos with applications to ring theory</em>, Lecture Notes in Mathematics <strong>1038</strong>, Springer 1983, ix+240 pp. <a href='http://www.ams.org/mathscinet-getitem?mr=724431'>MR85h:18005</a></p>
 </li>
+</ul>
+
+<p>Introduction to <a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>topos theory</a>:</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Francis+Borceux'>Francis Borceux</a>, <em>Some glances at topos theory</em> , lecture notes Como 2018. (<a href='http://tcsc.lakecomoschool.org/files/2018/06/Como2018.pdf'>pdf</a>)</li>
 </ul>
 
 <p>Some other papers</p>
@@ -357,19 +370,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May 18, 2011 15:14:30 
-  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (161.53.130.104)
+  <p>
+  Last revised on June 26, 2018 at 08:16:06.
+  See the <a href="https://ncatlab.org/nlab/history/Francis Borceux" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Francis+Borceux" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Francis+Borceux/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Francis+Borceux" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Francis+Borceux" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Francis+Borceux" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Francis+Borceux/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Francis+Borceux" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Francis+Borceux" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Francis Borceux/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Francis+Borceux" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Francis+Borceux" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Francis+Borceux" id="view_source" rel="nofollow">Source</a>
