--- a/pages/82.html
+++ b/pages/82.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8662/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8662/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -821,13 +821,21 @@ margin-left: 0em;
 
 <h3 id='introductions'>Introductions</h3>
 
-<p>Introductions include</p>
+<p>A gentle basic introduction is</p>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Ross+Street'>Ross Street</a>, <em>A survey of topos theory</em> (notes for students, 1978) <a href='http://www.math.mq.edu.au/~street/ToposSurvey.pdf'>pdf</a></p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/John+Baez'>John Baez</a>, <a href='http://math.ucr.edu/home/baez/topos.html'>Topos Theory in a Nutshell</a>.</li>
+</ul>
 
+<p>A quick introduction of the basic facts of <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> theory is chapter I, “Background in topos theory” in</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Ieke+Moerdijk'>Ieke Moerdijk</a>, <em>Classifying Spaces and Classifying Topoi</em> Lecture Notes in Mathematics 1616, Springer (1995).</li>
+</ul>
+
+<p>Other introductions include</p>
+
+<ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Tom+Leinster'>Tom Leinster</a>, <em><a class='existingWikiWord' href='/nlab/show/Leinster2010'>An informal introduction to topos theory</a></em> (2010)</p>
 </li>
@@ -843,10 +851,16 @@ margin-left: 0em;
 
 <h3 id='textbooks'>Textbooks</h3>
 
-<p>A standard textbook is</p>
+<p>The mother of it all though not exactly a textbook</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, <em>Topos theory</em>, London Math. Soc. Monographs <strong>10</strong>, Acad. Press 1977, xxiii+367 pp.</li>
+<li id='SGA4'><a class='existingWikiWord' href='/nlab/show/Michael+Artin'>M.Artin</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Grothendieck'>A.Grothendieck</a>, <a class='existingWikiWord' href='/nlab/show/Jean-Louis+Verdier'>J. L. Verdier</a> (eds.), <em>Théorie des Topos et Cohomologie Etale des Schémas - SGA 4</em> , LNM <strong>269</strong> Springer Heidelberg 1972.</li>
+</ul>
+
+<p>A still very useful reference is the monograph</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, <em>Topos theory</em>, London Math. Soc. Monographs <strong>10</strong>, Acad. Press 1977, xxiii+367 pp. (Available as Dover Reprint, Mineola 2014)</li>
 </ul>
 
 <p>This later grew into the more detailed</p>
@@ -855,35 +869,37 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, <a class='existingWikiWord' href='/nlab/show/Elephant'>Sketches of an elephant: a topos theory compendium</a></li>
 </ul>
 
-<p>A quick introduction of the basic facts of <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> theory is chapter I, “Background in topos theory” in</p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Ieke+Moerdijk'>Ieke Moerdijk</a>, <em>Classifying Spaces and Classifying Topoi</em> Lecture Notes in Mathematics 1616, Springer (1995)</li>
-</ul>
-
-<p>A standard textbook on this case is</p>
+<p>Maybe the standard modern textbook on Grothendieck toposes is</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Saunders+Mac+Lane'>Saunders MacLane</a>, <a class='existingWikiWord' href='/nlab/show/Ieke+Moerdijk'>Ieke Moerdijk</a>, <em><a class='existingWikiWord' href='/nlab/show/Sheaves+in+Geometry+and+Logic'>Sheaves in Geometry and Logic</a></em></li>
 </ul>
 
-<p>Introducing even category theory from the scratch while still managing to cover considerable ground, the following textbook is the <em>royal road to topos theory</em> for people with some background in <a class='existingWikiWord' href='/nlab/show/predicate+logic'>first-order logic</a>:</p>
+<p>A thorough but clear first introduction to topos theory is</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Francis+Borceux'>Francis Borceux</a>, <em>Handbook of Categorical Algebra 3 - Categories of Sheaves</em> , Cambridge UP 1994.</li>
+</ul>
+
+<p>Introducing even category theory from the scratch while still managing to cover some ground, the following textbook is the <em>royal road to topos theory</em> for people with some background in <a class='existingWikiWord' href='/nlab/show/predicate+logic'>first-order logic</a>:</p>
 
 <ul>
 <li id='Goldblatt84'>R. Goldblatt, <em>Topoi - The Categorical Analysis of Logic</em> , 2nd ed. North-Holland Amsterdam 1984. (Dover reprint New York 2006; <a href='http://projecteuclid.org/euclid.bia/1403013939'>project euclid</a>)</li>
 </ul>
 
-<p>A gentle basic introduction is</p>
+<p>Similarly, the following monograph develops topos theory to considerable depth without categorical prerequisites</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/John+Baez'>John Baez</a>, <a href='http://math.ucr.edu/home/baez/topos.html'>Topos Theory in a Nutshell</a>.</li>
+<li><a class='existingWikiWord' href='/nlab/show/Michael+Barr'>Michael Barr</a>, <a class='existingWikiWord' href='/nlab/show/Charles+Wells'>Charles Wells</a>, <em>Toposes, Triples and Theories</em> , Springer Heidelberg 1985. (Available as <a href='http://www.tac.mta.ca/tac/reprints/articles/12/tr12abs.html'>TAC reprint no.12</a> 2005)</li>
 </ul>
 
-<p>A quick introduction of the basic facts of <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> theory is chapter I, “Background in topos theory” in</p>
+<p>See also</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Ieke+Moerdijk'>Ieke Moerdijk</a>, <em>Classifying Spaces and Classifying Topoi</em> Lecture Notes in Mathematics 1616, Springer (1995)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Olivia+Caramello'>Olivia Caramello</a>, <em>Theories, Sites, Toposes</em>, Oxford UP 2017.</li>
 </ul>
+
+<h3 id='course_notes'>Course notes</h3>
 
 <p>A survey is in</p>
 
@@ -891,22 +907,28 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Ross+Street'>Ross Street</a>, <em>A survey of topos theory</em> (notes for students, 1978) <a href='http://www.math.mq.edu.au/~street/ToposSurvey.pdf'>pdf</a></li>
 </ul>
 
-<p>See also</p>
+<p>A nice and concise introduction is available in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Olivia+Caramello'>Olivia Caramello</a>, <em>Theories, Sites, Toposes</em>, Oxford 2017</li>
-</ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Francis+Borceux'>Francis Borceux</a>, <em>Some glances at topos theory</em> , lecture notes Como 2018. (<a href='http://tcsc.lakecomoschool.org/files/2018/06/Como2018.pdf'>pdf</a>)</p>
+</li>
 
-<h3 id='course_notes'>Course notes</h3>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Ieke+Moerdijk'>Ieke Moerdijk</a>, <a class='existingWikiWord' href='/nlab/show/Jaap+van+Oosten'>Jaap van Oosten</a>, <em>Topos theory</em> Master Class notes (2007) (<a href='http://www.staff.science.uu.nl/~ooste110/syllabi/toposmoeder.pdf'>pdf</a>)</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Ieke+Moerdijk'>Ieke Moerdijk</a>, <a class='existingWikiWord' href='/nlab/show/Jaap+van+Oosten'>Jaap van Oosten</a>, <em>Topos theory</em> Master Class notes (2007) (<a href='http://www.staff.science.uu.nl/~ooste110/syllabi/toposmoeder.pdf'>pdf</a>)</p>
+</li>
 </ul>
 
 <h3 id='history'>History</h3>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Colin+McLarty'>Colin McLarty</a>, <em>The Uses and Abuses of the History of Topos Theory</em> , Brit. J. Phil. Sci., 41 (1990) (<a href='http://www.jstor.org/stable/687825'>JSTOR</a>) <a href='http://bjps.oxfordjournals.org/content/41/3/351.full.pdf'>PDF</a></li>
+<li id='Lawvere00'>
+<p><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>F. William Lawvere</a>, <em>Comments on the development of topos theory</em>, pp.715-734 in Pier (ed.), <em>Development of Mathematics 1950 - 2000</em> , Birkhäuser Basel 2000. (<a href='http://www.tac.mta.ca/tac/reprints/articles/24/tr24abs.html'>tac reprint</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Colin+McLarty'>Colin McLarty</a>, <em>The Uses and Abuses of the History of Topos Theory</em> , Brit. J. Phil. Sci., 41 (1990) (<a href='http://www.jstor.org/stable/687825'>JSTOR</a>) <a href='http://bjps.oxfordjournals.org/content/41/3/351.full.pdf'>PDF</a></p>
+</li>
 </ul>
 
 <p>A historical analysis of Grothendieck’s 1973 Buffalo lecture series on toposes and their precedents is in</p>
@@ -929,14 +951,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on June 25, 2018 at 09:10:20.
+  Last revised on June 26, 2018 at 08:24:38.
   See the <a href="https://ncatlab.org/nlab/history/sheaf and topos theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/sheaf+and+topos+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sheaf+and+topos+theory/30" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(30 revisions)</span> | <a href="/nlab/show/diff/sheaf+and+topos+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sheaf+and+topos+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/sheaf+and+topos+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sheaf+and+topos+theory/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/sheaf+and+topos+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sheaf+and+topos+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/sheaf and topos theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
